<!--

    Copyright (c) Vogler Engineering GmbH. All rights reserved.
    Licensed under the MIT License. See LICENSE.md in the project root for license information.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="/@{viewModel.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/login_devicename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_prompt_devicename"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="/@{viewModel.devicename}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="/@{viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/hostname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_prompt_hostname"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="#@{viewModel.hostname}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/login_action_sign_in"
                    android:textStyle="bold"


                    />
                <!--android:onClick="@{() -> viewModel.signIn()}"-->
                <!--android:enabled="#@{viewModel.signInEnabled}"-->

                <TextView
                    android:id="@+id/login_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="#@{viewModel.message}" />

            </LinearLayout>

        </ScrollView>
</LinearLayout>